--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,9 +20,10 @@
                 }
             },
             "args": [
-                "  help",
-                "  -x",
-                "  1",
+                "head",
+                "W:/Fun/rust-cmd-line-utilities/Readme.md",
+                "-n",
+                "5"
             ],
             "cwd": "${workspaceFolder}"
         },
