--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,8 +20,7 @@
                 }
             },
             "args": [
-                "ping",
-                "2001:0:0eab:dead::a0:abcd:4e",
+                "hostname",
             ],
             "cwd": "${workspaceFolder}"
         },
