fixed typos and updated readme

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
                 }
             },
             "args": [
-                "hostname",
+                "help",
             ],
             "cwd": "${workspaceFolder}"
         },
